# ChatOps

./: .env.template  .gitignore  .nojekyll  404.html  CHANGELOG.md  CONTRIBUTING.md  PRD.md  README.md  SETUP_GROQ.md  chat.bat  chat.ps1  chatops.bat  chatops.ps1  chatops_config.json  chatops_config.yaml  dashboard.html  index.html  integration-status.html  pyproject.toml  pytest.ini  run_tests.py  setup-global.ps1
.chatops_backups/: rollback_history.pkl  test_backup_file.txt.backup_20250727_190426
.cursor/: mcp.json
.github/workflows/: README.md  ci.yml  code-quality.yml  dependencies.yml  release.yml  security.yml
.taskmaster/: DASHBOARD.md  config.json  dashboard.html  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
chatops_cli/: __init__.py  __main__.py  config.py  main.py  settings.py
chatops_cli/cli/: __init__.py  main.py
chatops_cli/config/: __init__.py
chatops_cli/core/: __init__.py  command_executor.py  groq_client.py  langchain_integration.py  logging_system.py  ollama_client.py  os_detection.py  security_system.py
chatops_cli/plugins/: __init__.py  base.py  manager.py
chatops_cli/plugins/builtin/: __init__.py  docker_plugin.py  kubernetes_plugin.py  llm_plugin.py  system_plugin.py
docs/: API.md  USER_GUIDE.md
scripts/: chat.ps1  chatops.ps1
tests/: __init__.py  conftest.py  utils.py
